testsuite/tests/deriving/should_fail/T10598_fail4.stderr

T10598_fail4.hs:4:12: error:
    Illegal deriving strategy: stock
    Use DerivingStrategies to enable this extension
